# soteria

./: .dockerignore  .gitignore  .ocamlformat  .vscodeignore  AI_POLICY.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  FINISH_TOMORROW.md  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  REUSE.toml  THIRD_PARTY_NOTICES  TODOS.md  aggregate_cc.fish  bfa-c.Dockerfile  bfa-c.opam  bfa-c.opam.template  bfa-rust.opam  bfa-rust.opam.template  bfa-vscode.opam  bfa-vscode.opam.template  bfa.opam  bfa.opam.template  cn.c  cn2.c  dune-project  foo.rs  github_api_fetch.sh  hello.llbc  index.html  index.html.json  out.txt  package.json  problem.rs  ruxt.opam  (+16 more)
bfa_c/lib/: Fmt_ail.ml  Initialize_analysis.ml  Initialize_analysis.mli  abductor.ml  ail_helpers.ml  ail_linking.ml  ail_tys.ml  bfa_c_lsp.ml  bi_heap.ml  bi_heap.mli  bi_state.ml  bi_subst.ml  c_std.ml  call_graph.ml  call_trace.ml  chunk.ml  csymex.ml  driver.ml  dune  fun_ctx.ml  globs.ml  globs.mli  heap.ml  heap.mli  heap_intf.ml  interp.ml  layout.ml  range.ml  state.ml  state.mli  store.ml  summary.ml  svalue.ml  svalue.ml.wish  syntaxes.ml  tree_block.ml  typed.ml  typed.mli  utils.ml  z3solver.ml
bfa_rust/kani_lib/: dune
bfa_rust/kani_lib/kani/: Cargo.toml
bfa_rust/lib/: call_trace.ml  charon_util.ml  cmd.ml  core.ml  driver.ml  dune  encoder.ml  heap.ml  heap.mli  heap_intf.ml  interp.ml  l.ml  layout.ml  range.ml  rust_std.ml  rustsymex.ml  sptr.ml  std_funs.ml  std_globals.ml  std_types.ml  store.ml  svalue.ml  tree_block.ml  tree_borrow.ml  tree_borrow.mli  typed.ml  typed.mli  utils.ml  z3floats.ml  z3solver.ml
bfa_rust/lib/omir/: ast.ml  dune  omir.ml  utils.ml
lib/bfa_c/: Fmt_ail.ml  bfa_c_lsp.ml  c_std.ml  chunk.ml  config.ml  csymex.ml  driver.ml  dune  heap.ml  interp.ml  l.ml  layout.ml  pp_to_fmt.ml  range.ml  store.ml  svalue.ml  svalue.mli  tree_block.ml  utils.ml  z3solver.ml
packaging/: common_lib.ml  dune  macOS_dylibs.txt  package.ml
packaging/soteria-c/: dune  package.ml
packaging/soteria-rust/: dune  package.ml
ruxt/lib/: config.ml  consume.ml  debug.ml  dune  heap.ml  heap.mli  library.ml  print.ml  refute.ml  result.ml  subst.ml  summary.ml  wrapper.ml  wrapper.mli
soteria-c/lib/: Initialize_analysis.ml  Initialize_analysis.mli  abductor.ml  aggregate_val.ml  ail_helpers.ml  ail_linking.ml  ail_tys.ml  bi_state.ml  bi_state.mli  block.ml  c_std.ml  call_graph.ml  cn_state.ml  compilation_database.ml  config.ml  constants.ml  csymex.ml  ctree_block.ml  driver.ml  dune  error.ml  fmt_ail.ml  fun_ctx.ml  globs.ml  globs.mli  identifier.ml  interp.ml  l.ml  label_cache.ml  layout.ml  my_progress.ml  range.ml  soteria_c_lsp.ml  state.ml  state.mli  state_intf.ml  state_variants.ml  stats.ml  store.ml  store.mli  (+8 more)
soteria-rust/kani_lib/: dune
soteria-rust/lib/: alloc_kind.ml  alloc_meta.ml  call_graph.ml  call_trace.ml  charon_util.ml  config.ml  core.ml  crate.ml  driver.ml  dune  encoder.ml  error.ml  frontend.ml  frontend_runtime.ml  fun_kind.ml  heap.ml  heap.mli  heap_intf.ml  interp.ml  l.ml  layout.ml  layout_common.ml  plugin.ml  range.ml  rtree_block.ml  rust_state_m.ml  rust_val.ml  rust_val.mli  rustsymex.ml  sptr.ml  state.ml  state.mli  state_intf.ml  state_monad.ml  std_funs.ml  std_types.ml  store.ml  svalue.ml  trace.ml  tree_block.ml  (+12 more)
soteria-rust/lib/analyses/: common.ml  outcome.ml  util.ml  wpst.ml
soteria-rust/lib/builtins/: alloc.ml  core.ml  eval.ml  fixme.ml  intrinsics.ml  intrinsics.mli  intrinsics_impl.ml  intrinsics_intf.ml  intrinsics_stubs.ml  kani.ml  miri.ml  optim.ml  rusteria.ml  soteria_lib.ml  std.ml  stubs.json  stubs.schema.json  system.ml  tokio.ml
soteria-rust/lib/common/: alloc_kind.ml  charon_util.ml  fun_kind.ml
soteria-rust/lib/rust_val/: rust_val.ml
soteria-rust/lib/ruxt/: heap.ml  heap.mli  print.ml  refute.ml  state.ml  summary.ml
soteria-rust/lib/state/: bi_state.ml  bi_state.mli  rtree_block.ml  rust_state_m.ml  state.ml  state_intf.ml  tree_state.ml
soteria-rust/lib/svalue/: ext.ml  old_rust_val.ml  ptr_tag.ml  ptr_tag.mli  rust_val.ml  typed.ml  typed.mli  typed_core.ml
soteria-rust/lib/tree_borrows/: common.ml  concrete.ml  ptr_tag.ml  ptr_tag.mli  raw.ml  tree_borrows.ml  tree_borrows_intf.ml
soteria-rust/plugins/rusteria_macros/: Cargo.toml
soteria-rust/test/cram/: cleanup.sh  common.sh  dune
soteria-rust/test/ppx/: dune  test.sh
soteria-rust/tests/ppx/: dune
soteria/lib/: dune  index.mld  soteria.ml  soteria_smt.ml  version.ml
soteria/lib/bv_values/: analyses.ml  analyses.mli  bv_solver.ml  bv_solver.mli  bv_values.ml  c_solver.ml  c_solver.mli  dune  encoding.ml  encoding.mli  eval.ml  eval.mli  expr.ml  save_counter.ml  save_counter.mli  smt_utils.ml  solver_interface.ml  svalue.ml  svalue.mli  svalue_dsl.ml  syn.ml  typed.ml  typed.mli  typed_intf.ml  z3_exe.ml  z3_exe.mli
soteria/lib/c_values/: alt_ergo_intf.ml  analyses.ml  bv_lower.ml  c_solver.ml  c_solver.mli  c_solver_incr.ml  dune  encoding.ml  eval.ml  save_counter.mli  smt_utils.ml  smtlib_encoding.ml  solver.ml  solver_config.ml  solver_exe.ml  solver_interface.ml  svalue.ml  typed.ml  typed.mli  z3_exe.ml  z3solver.ml  z3solver_noincr.ml  z3utils.ml
soteria/lib/config/: config.ml
soteria/lib/coverage/: config.ml  coverage.ml  coverage.mli  types.ml  writers.ml
soteria/lib/data/: abstr.ml  data.ml  range_tree.ml  range_tree.mli  range_tree_intf.ml  s_bool.ml  s_int.ml  s_map.ml  s_map.mli  s_map_intf.ml  s_range.ml
soteria/lib/logging/: cli.ml  config.ml  dune  html.ml  level.ml  logs.ml  logs.mli  soteria_logs.ml
soteria/lib/logic/: asrt.ml  asrt.ml_  logic.ml  mp.ml  producer.ml  spec.ml  spec.ml_  substs.ml  symex_with_syntax.ml  syntax.ml  util.ml  v_subst.ml_  x.ml
soteria/lib/logs/: cli.ml  color.ml  config.ml  level.ml  logs.ml  logs.mli  printers.ml  profile.ml
soteria/lib/profiling/: config.ml  flamegraph.ml  profiling.ml  profiling.mli
soteria/lib/smt/: fast_sexp.ml  smt.ml
soteria/lib/solvers/: config.ml  smt_utils.ml  smt_utils.mli  solver_interface.ml  solver_interface.mli  solvers.ml  value.ml  z3.ml
(+21929 files in other folders)
