(library
 (package bfa-c)
 (name bfa_c_lib)
 (libraries
  bfa.bfa_symex
  cmdliner
  fmt
  logs
  logs.fmt
  fmt.tty
  cerberus-lib.c_parser
  cerberus-lib.mem.concrete
  cerberus-lib.backend_common
  zarith
  hashcons
  simple_smt
  linol
  linol-eio
  eio_main)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_symex ppx_inline_test)))
