(include_subdirs qualified)

(library
 (package bfa-c)
 (name bfa_c_lib)
 (libraries
  bfa.std
  bfa.bfa_symex
  cmdliner
  fmt
  logs
  logs.fmt
  fmt.tty
  iter
  cerberus-lib.c_parser
  cerberus-lib.mem.concrete
  cerberus-lib.backend_common
  zarith
  hashcons
  simple_smt
  linol
  linol-eio
  eio_main
  printbox-text
  tsort)
 (flags :standard -open Bfa_std)
 (preprocess
  (pps ppx_deriving.std ppx_symex))
 (instrumentation
  (backend landmarks --auto)))
