(include_subdirs qualified)

(library
 (package bfa-rust)
 (name bfa_rust_lib)
 (libraries
  bfa.std
  bfa.bfa_symex
  cmdliner
  fmt
  logs
  logs.fmt
  fmt.tty
  iter
  zarith
  hashcons
  simple_smt
  linol
  linol-eio
  eio_main
  printbox-text
  charon
  dune-site)
 (flags :standard -open Bfa_std)
 (preprocess
  (pps ppx_deriving.std ppx_symex))
 (instrumentation
  (backend landmarks --auto)))

(generate_sites_module
 (module runtime_sites)
 (sites bfa-rust))
