(library
 (package bfa-c)
 (name bfa_c_lib)
 (libraries
  bfa.bfa_symex
  bfa.bfa_lsp
  cmdliner
  fmt
  logs
  logs.fmt
  fmt.tty
  cerberus-lib.c_parser
  cerberus-lib.mem.concrete
  cerberus-lib.backend_common
  zarith
  hashcons
  simple_smt)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.std ppx_symex ppx_inline_test)))
