(executable
 (name package)
 (libraries
  packaging_common
  cerberus-lib.c_parser
  cerberus-lib.mem.vip
  cerberus-lib.backend_common
  soteria_c_lib))

(rule ; Verify macOS_dylibs.txt is up-to-date on macOS.
 (alias soteria-c-dylist-file)
 (enabled_if
  (= %{system} "macosx"))
 (deps %{bin:soteria-c} ./package.exe)
 (action
  (progn
   (with-stdout-to
    macOS_dylibs_found.txt
    (run ./package.exe infer-dylibs %{bin:soteria-c}))
   (diff? macOS_dylibs.txt macOS_dylibs_found.txt))))

(rule ; Verify linux_dylibs.txt is up-to-date on Linux.
 (alias soteria-c-dylist-file)
 (enabled_if
  (= %{system} "linux"))
 (deps %{bin:soteria-c} ./package.exe)
 (action
  (progn
   (with-stdout-to
    linux_dylibs_found.txt
    (run ./package.exe infer-dylibs %{bin:soteria-c}))
   (diff? linux_dylibs.txt linux_dylibs_found.txt))))
