(executable
 (name package)
 (libraries packaging_common soteria_rust_lib))

(rule ; This rule makes sure the macOS_dylibs.txt are up-to-date.
 (alias soteria-rust-dylist-file)
 (deps %{bin:soteria-rust} ./package.exe)
 (action
  (progn
   (with-stdout-to
    macOS_dylibs_found.txt
    (run ./package.exe infer-dylibs %{bin:soteria-rust}))
   (diff? macOS_dylibs.txt macOS_dylibs_found.txt))))
