(include_subdirs qualified)

(library
 (package ruxt)
 (name ruxt_lib)
 (libraries cmdliner soteria_rust_lib)
 (flags :standard -open Soteria.Soteria_std -open Soteria.Bv_values)
 (preprocess
  (pps ppx_deriving.std ppx_subliner soteria.ppx))
 (instrumentation
  (backend landmarks --auto)))

(generate_sites_module
 (module runtime_sites)
 (sites ruxt))
