(include_subdirs qualified)

(library
 (package soteria-c)
 (name soteria_c_lib)
 (libraries
  soteria.std
  soteria.symex
  soteria.logs
  soteria.c_values
  cmdliner
  fmt
  iter
  cerberus-lib.c_parser
  cerberus-lib.mem.concrete
  cerberus-lib.backend_common
  zarith
  hashcons
  simple_smt
  linol
  linol-eio
  eio_main
  yojson
  printbox-text
  tsort
  progress
  dune-site)
 (flags :standard -open Soteria_std -open Soteria_c_values)
 (preprocess
  (pps ppx_deriving.std soteria.ppx))
 (instrumentation
  (backend landmarks --auto)))

(generate_sites_module
 (module auto_include_site)
 (sites soteria-c))
