(include_subdirs qualified)

(library
 (package soteria-c)
 (name soteria_c_lib)
 (libraries
  soteria
  cmdliner
  fmt
  iter
  cerberus-lib.c_parser
  cerberus-lib.mem.concrete
  cerberus-lib.backend_common
  zarith
  simple_smt
  linol
  linol-eio
  eio_main
  yojson
  tsort
  progress
  grace
  grace.ansi_renderer
  dune-site)
 (flags
  :standard
  -open
  Soteria.Soteria_std
  -open
  Soteria.C_values
  -open
  Soteria.Logs.Import)
 (preprocess
  (pps ppx_deriving.std ppx_subliner soteria.ppx))
 (instrumentation
  (backend landmarks --auto)))

(generate_sites_module
 (module auto_include_site)
 (sites soteria-c))
