(include_subdirs qualified)

(library
 (name soteria_rust_lib)
 (public_name soteria-rust)
 (libraries
  charon
  cmdliner
  dune-site
  fmt
  fmt.tty
  grace
  grace.ansi_renderer
  iter
  simple_smt
  soteria
  str
  patricia-tree
  zarith)
 (flags :standard -open Soteria.Soteria_std -open Soteria.Bv_values)
 (preprocess
  (pps
   ppx_deriving.std
   ppx_subliner
   soteria.ppx
   ppx_deriving_hash
   ppx_mixins))
 (instrumentation
  (backend landmarks --auto)))

(generate_sites_module
 (module runtime_sites)
 (sites soteria-rust))
