(include_subdirs qualified)

(library
 (name soteria)
 (public_name soteria)
 (libraries
  cmdliner
  fmt
  grace
  grace.ansi_renderer
  hc
  htmlit
  iter
  printbox-text
  progress
  simple_smt
  tsort
  unix
  yojson
  zarith)
 (preprocess
  (pps
   ppx_blob
   ppx_symex
   ppx_deriving.std
   ppx_deriving_yojson
   ppx_subliner
   ppx_inline_test))
 (preprocessor_deps
  (file "logging/assets/soteria_logs.js")
  (file "logging/assets/soteria_logs.css")))

(documentation
 (package soteria))
