(include_subdirs qualified)

(library
 (name soteria)
 (public_name soteria)
 (libraries
  cmdliner
  fmt
  grace
  grace.ansi_renderer
  hc
  htmlit
  iter
  printbox-text
  progress
  simple_smt
  tsort
  unix
  unionFind
  yojson
  zarith)
 (preprocess
  (pps ppx_blob ppx_symex ppx_deriving.std ppx_deriving_yojson ppx_subliner))
 (preprocessor_deps
  (file "logs/assets/soteria_logs.js")
  (file "logs/assets/soteria_logs.css"))
 (instrumentation
  (backend landmarks --auto)))
