(include_subdirs qualified)

(library
 (name soteria)
 (public_name soteria)
 (libraries
  cmdliner
  flamegraphs
  fmt
  grace
  grace.ansi_renderer
  hc
  htmlit
  iter
  patricia-tree
  printbox-text
  progress
  simple_smt
  str
  tsort
  unix
  unionFind
  yojson
  zarith)
 (preprocess
  (pps ppx_blob ppx_symex ppx_deriving.std ppx_deriving_yojson ppx_subliner))
 (preprocessor_deps
  (file "logs/assets/soteria_logs.js")
  (file "logs/assets/soteria_logs.css"))
 (instrumentation
  (backend landmarks --auto)))
