[package]
name = "rusteria_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = { version = "2.0.1", features = ["nightly"] }
proc-macro2 = { version = "1.0.93", features = ["nightly"] }
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full", "visit-mut", "visit", "extra-traits"] }
