(executable
 (name standalone)
 (modules standalone)
 (libraries soteria ppxlib ppx_symex)
 (flags :standard -open Soteria.Tiny_values))

(cram
 (deps
  ./standalone.exe
  ./test.sh
  ./reversible/prelude.ml
  ./reversible/simple.ml
  ./reversible/ignored.ml
  ./reversible/all_ignored.ml
  ./reversible/err_non_t.ml
  ./logs/prelude.ml
  ./logs/simple.ml
  ./logs/err_function_payload.ml
  ./logs/err_labelled.ml)
 (applies_to :whole_subtree))
